The Augmented Reality Sandbox History
=====================================

SARndbox-1.0:
- Initial release, needs Vrui-2.4 to build.